Add state to games, populate with mock data

--- a/src/home/GameScroll.scss
+++ b/src/home/GameScroll.scss
@@ -12,7 +12,7 @@
     -ms-overflow-style: -ms-autohiding-scrollbar;
   }
 
-  .Pre-game-scroll {
+  .Pre-game-scroll, .Post-game-scroll {
     min-width: 8.3%;
   }
 }
