--- a/src/home/components/GameItem.scss
+++ b/src/home/components/GameItem.scss
@@ -1,4 +1,4 @@
-.Game {
+.GameItem {
   margin-right: 1.16%;
   width: 20%;
 
@@ -11,6 +11,7 @@
   .Game-title {
     color: #58BAF8;
     white-space: nowrap;
+    text-align: center;
   }
 
   .Game-logo {
