--- a/src/App.scss
+++ b/src/App.scss
@@ -39,9 +39,16 @@
 // }
 
 .Ns-container {
-  position: relative;
-  padding-top: 56.25%;
-  width: 100%;;
+  width: 100vw;
+  height: 56.25vw;
+  max-height: 100vh;
+  max-width: 177.78vh;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 
   background-color: #EBEBEB;
 
