Better handle responsiveness for different screen sizes

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,10 @@
+.App {
+  background-color: black;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+
 .Ns-container {
   width: 100vw;
   height: 56.25vw;
