--- a/src/home/Header.scss
+++ b/src/home/Header.scss
@@ -1,6 +1,8 @@
 .Header {
   margin-left: 3%;
   margin-right: 3%;
+  height: 9.69vw;
+  max-height: 17.3vh;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
