--- a/src/home/ButtonsToolbar.scss
+++ b/src/home/ButtonsToolbar.scss
@@ -1,5 +1,7 @@
 .Buttons-toolbar {
   width: 100%;
+  height: 10vw;
+  max-height: 17.8vh;
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
