--- a/src/home/GameScroll.scss
+++ b/src/home/GameScroll.scss
@@ -1,7 +1,10 @@
 .Game-scroll {
   width: 100%;
+  height: 24.6vw;
+  max-height: 43.8vh;
   display: flex;
   flex-direction: row;
+  align-items: flex-end;
 
   .Scroll-box {
     width: 100%;
