--- a/src/home/components/AllSoftwareButton.scss
+++ b/src/home/components/AllSoftwareButton.scss
@@ -1,9 +1,9 @@
 .AllSoftwareButton {
   margin-right: 1.16%;
   width: 20%;
-
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
   justify-content: flex-end;
 
   flex: 0 0 auto;
