--- a/src/home/components/GameItem.scss
+++ b/src/home/components/GameItem.scss
@@ -19,7 +19,7 @@
 
   .Game-logo {
     position: relative;
-    margin-bottom: 1rem;
+    margin-bottom: 6px;
     // border: 5px solid #F5F4FA;  /* light */
 
     /* dark */
