--- a/src/home/Header.scss
+++ b/src/home/Header.scss
@@ -1,6 +1,8 @@
 .Header {
-  margin-left: 3%;
-  margin-right: 3%;
+  position: absolute;
+  top: 4%;
+  left: 4.5%;
+  right: 4.5%;
   height: 9.69vw;
   max-height: 17.3vh;
   display: flex;
@@ -21,5 +23,6 @@
     justify-content: flex-end;
     color: #FFFFFF;
     white-space: nowrap;
+    margin-top: 0 !important;
   }
 }
