--- a/src/home/components/ProfileButtonItem.scss
+++ b/src/home/components/ProfileButtonItem.scss
@@ -8,7 +8,7 @@
     position: relative;
     height: 100%;
     width: 100%;
-    margin-top: 1rem;
+    flex: 0 0;
     background-color: #505050;
     border-radius: 50%;
     display: inline-block;
@@ -34,7 +34,8 @@
   }
 
   .Button-title {
-    margin-top: 0.5rem;
+    margin-top: 0;
+    margin-bottom: 0;
     color: #58BAF8;
     white-space: nowrap;
     text-align: center;
